--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,4 +42,18 @@ h1, h2{
 }
 .box:nth-child(4) h2{
 	background: #2BAF2B;
+}  
+
+@media(min-width: 768px) and (max-width: 991px){
+	.box {
+		width: 50%;
+	}
+	.box:last-child{
+		width: 100%;
+	}
+}
+@media(max-width: 767px){
+	.box {
+		width: 100%;
+	}
 }
